--- a/content/blog/levin-award.Rmd
+++ b/content/blog/levin-award.Rmd
@@ -15,7 +15,7 @@ Last week I was honored to receive the Martin Levin ICPSR Training Award at our 
 <br>
 <br>
 
-<div style="text-align: right"> *DGS [Dr. Ellen Idler](http://sociology.emory.edu/home/people/faculty/idler-ellen.html) and I* </div>
+<div style="text-align: right"> *DGS Dr. Ellen Idler and I* </div>
 
 <div style="text-align: right"> *April 19, 2018* </div>
 
