sssr slides in new tab

--- a/content/blog/sssr2018.md
+++ b/content/blog/sssr2018.md
@@ -11,7 +11,7 @@ This year’s Society for the Scientific Study of Religion (SSSR) conference was
 
 <img src="/blog/v1.jpg"/>
 
-On Saturday I presented a chapter of my dissertation titled “The (De)Institutionalization of Külber-Ross’ Five-Stage Model of Death and Dying.” [You can find the slides here.](https://drive.google.com/file/d/1MrQlPapEE7233lNtXYW3ZcWOKjgQC2Ak/view?usp=sharing) 
+On Saturday I presented a chapter of my dissertation titled “The (De)Institutionalization of Külber-Ross’ Five-Stage Model of Death and Dying.” <a href = "https://drive.google.com/file/d/1MrQlPapEE7233lNtXYW3ZcWOKjgQC2Ak/view?usp=sharing" target = "_blank">You can find the slides here.</a>
 
 <img src="/blog/v2.jpg" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
 <img src="/blog/v3.jpg" style="float: right; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
